# kaggle-lux-2024

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.train  LICENSE  Makefile  README.md  build.rs  docker-compose.yaml  generate_full_game_test_cases.sh  generate_memory_test_cases.sh  mypy.ini  pyproject.toml  rust-toolchain.toml  rustfmt.toml  write-up.md
media/: model_architecture.mmd
python/: main.py
python/rl/: train_a2c.py  train_ppo.py  train_unit_factorized_ppo.py
python/rl/config/: .gitignore  ppo.yaml  ppo_default.yaml  unit_factorized_ppo.yaml  unit_factorized_ppo_default.yaml
python/rux_2024/: _lowlevel.pyi  conftest.py  parallel_env.py  test_env_params_ranges.py  test_hello.py  test_lowlevel.py  test_parallel_env.py  types.py
python/rux_2024/models/: actor_critic.py  actor_heads.py  conv_blocks.py  critic_heads.py  types.py  utils.py
python/rux_ai_s3/: _lowlevel.pyi  conftest.py  constants.py  feature_engineering_env.py  lowlevel.pyi  parallel_env.py  test_constants.py  test_hello_world.py  test_lowlevel.py  types.py  utils.py
python/rux_ai_s3/models/: actor_critic.py  actor_heads.py  attn_blocks.py  build.py  conv_blocks.py  critic_heads.py  rotary_embedding_torch.py  test_actor_critic.py  types.py  utils.py  weight_initialization.py
python/rux_ai_s3/models/actor_critic/: __init__.py  base.py  model.py  out.py
python/rux_ai_s3/rl_agent/: .gitignore  agent.py  agent_config.yaml  data_augmentation.py  test_agent.py  test_data_augmentation.py
python/rux_ai_s3/rl_training/: constants.py  evaluation.py  ppo.py  test_constants.py  test_ppo.py  train_config.py  utils.py
python/scripts/: .gitignore  add_energy_node_fns_to_replay.py  env_speed_test.py  estimate_energy_field_frequencies.py  generate_energy_node_test_case.py  model_surgery.py  process_replay_for_tests.py  run_match.py
python/test_agent/: agent.py  main.py
python/test_agent/lux/: kit.py  utils.py
python/tests/: test_train_ppo.py  test_train_unit_factorized_ppo.py
scripts/: generate_full_game_test_cases.sh  generate_memory_test_cases.sh  make_submission.sh
src/: env_api.rs  env_config.rs  feature_engineering.rs  izip_eq.rs  lib.rs  parallel_env.rs  rules_engine.rs
src/data/: energy_field_frequencies.json  env_params_ranges.json
src/env_api/: env_data.rs  feature_engineering_env.rs  parallel_env.rs  utils.rs
src/env_config/: reward_space.rs  sap_masking.rs
src/feature_engineering/: action_space.rs  energy_field_frequencies.rs  memory.rs  obs_space.rs  replay.rs  reward_space.rs  unit_features.rs  utils.rs
src/feature_engineering/memory/: action.rs  cached_energy_fields.rs  energy_field.rs  hidden_parameter.rs  hidden_parameters.rs  masked_possibilities.rs  probabilities.rs  relic_node.rs  relic_nodes.rs  space_obstacle.rs  space_obstacles.rs  utils.rs
src/feature_engineering/obs_space/: basic_obs_space.rs
src/feature_engineering/test_data/: .gitignore
src/rules_engine/: action.rs  env.rs  game_stats.rs  memory.rs  obs_space.rs  parallel_env.rs  param_ranges.rs  params.rs  python_api.rs  replay.rs  state.rs
src/rules_engine/memory/: relic_node_memory.rs
src/rules_engine/state/: from_array.rs  from_lux.rs  state_data.rs
src/rules_engine/test_data/: get_energy_field_1815350780.json  get_energy_field_407811525.json  get_energy_field_425608142.json
tests/: test_izip_eq.rs
