[package]
name = "rux-2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_lowlevel"
crate-type = ["cdylib", "rlib"]

[dependencies]
itertools = "0.13.0"
numpy = "0.21.0"
pyo3 = "0.21"
rand = "0.8.5"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
