[package]
name = "rux-ai-s3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lowlevel"
crate-type = ["cdylib", "rlib"]

[dependencies]
itertools = "0.13.0"
numpy = "0.22.1"
pyo3 = "0.22"
rand = "0.8.5"
rstest = "0.23.0"
serde_json = "1.0.132"
serde = { version = "1.0.215", features = ["derive"] }
rayon = "1.10.0"
strum_macros = "0.26.4"
strum = { version = "0.26.3", features = ["derive"] }
glob = "0.3.2"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dev-dependencies]
pretty_assertions = "1.4.1"

[profile.release]
lto = true
incremental = false
codegen-units = 1
